bases/veidemann-controller/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: veidemann-controller
  labels:
    app.kubernetes.io/name: veidemann-controller
    app.kubernetes.io/component: controller
  annotations:
    sidecar.jaegertracing.io/inject: jaeger
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: veidemann-controller
      app.kubernetes.io/component: controller
  template:
    metadata:
      labels:
        app.kubernetes.io/name: veidemann-controller
        app.kubernetes.io/component: controller
      annotations:
        # skip outbound to jaeger collector
        config.linkerd.io/skip-outbound-ports: "14250"
        # skip inbound API ports: grpc (7700) and grpc-web (10000)
        config.linkerd.io/skip-inbound-ports: "7700,10000"
        linkerd.io/inject: enabled
    spec:
      volumes:
        - name: api-key
          secret:
            secretName: veidemann-controller
            items:
              - key: apiKeyRoleMapping.txt
                path: apiKeyRoleMapping.txt
        - name: log4j2
          configMap:
            name: veidemann-controller
            items:
              - key: log4j2.xml
                path: log4j2.xml
        - name: envoy-config
          configMap:
            name: veidemann-controller-envoy
      containers:
        - name: veidemann-controller
          image: norsknettarkiv/veidemann-controller:0.8.0
          ports:
            - name: grpc
              containerPort: 7700
          resources: {}
          volumeMounts:
            - name: api-key
              mountPath: /app/resources/apiKeyRoleMapping.txt
              subPath: apiKeyRoleMapping.txt
            - name: log4j2
              mountPath: /veidemann/config/log4j2.xml
              subPath: log4j2.xml

        - name: veidemann-controller-envoy
          image: envoyproxy/envoy-alpine:v1.16.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: admin
              containerPort: 9901
              protocol: TCP
            - name: grpc-web
              containerPort: 10000
              protocol: TCP
          command:
            - envoy
          args:
            - -c
            - /config/envoy.yaml
          livenessProbe:
            tcpSocket:
              port: admin
            initialDelaySeconds: 2
          readinessProbe:
            tcpSocket:
              port: admin
            initialDelaySeconds: 2
          volumeMounts:
            - name: envoy-config
              mountPath: /config
