bases/veidemann-controller/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: veidemann-controller
  labels:
    app.kubernetes.io/name: veidemann-controller
    app.kubernetes.io/component: controller
spec:
  type: ClusterIP
  ports:
    - port: 7700
      name: grpc
      targetPort: grpc
    - port: 10000
      name: http-grpc-web
      targetPort: grpc-web
      protocol: TCP
  selector:
    app.kubernetes.io/name: veidemann-controller
    app.kubernetes.io/component: controller
