bases/veidemann-controller/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: GRPC
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    app: veidemann
    component: veidemann-controller
  name: veidemann-controller
spec:
  rules:
  - host: veidemann.local
    http:
      paths:
      - backend:
          serviceName: veidemann-controller
          servicePort: grpc
        path: /veidemann.api
---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  labels:
    app: veidemann
    component: veidemann-controller
  name: grpc-web
spec:
  rules:
    - host: veidemann.local
      http:
        paths:
          - backend:
              serviceName: veidemann-controller
              servicePort: grpc-web
            path: /grpc-web/(.*)
